--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -1,5 +1,10 @@
 FROM osu_docker:latest
 
+ENV username=jenkins
+ENV python_version=3
+ENV git_commit=HEAD
+ENV branch=master
+
 #RUN apt-get update && apt-get install -y --no-install-recommends \
 #    git sudo
 
@@ -7,10 +12,10 @@ FROM osu_docker:latest
 #RUN echo "pytorch ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 #USER pytorch
 
-RUN cd /home/pytorch && rm -rf pytorch_builder
+RUN cd /home/$username && rm -rf pytorch_builder
 
 RUN cd /home/pytorch && git config --global http.sslVerify false && \
 	git clone https://github.com/avmgithub/pytorch_builder.git && \
 	cd pytorch_builder && \
 	chmod +x build_nimbix.sh && \
-	./build_nimbix.sh  pytorch HEAD master foo 3 LINUX
+	./build_nimbix.sh  pytorch $git_commit $branch foo $python_version LINUX
